--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Dongxu Wang"
 title_separator          : "-"
 name                     : &name "Dongxu Wang"
 description              : &description "personal description"
-url                      : https://DongxuWang.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://patrick647.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "DongxuWang/DongxuWang.github.io"
+repository               : "patrick647/patrick647.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
